--- a/styles/style.css
+++ b/styles/style.css
@@ -57,7 +57,7 @@ footer li{
 
 /* COLOR AND SIZING ROOTS */
 :root{
-    --primary-color: rgba(251, 222, 60, 1);
+    --primary-color: rgb(255, 251, 0);
     --secondary-color: rgba(34, 34, 34, 1);
     --secondary-color-light: rgba(34, 34, 34, 0.6);
 
@@ -116,9 +116,19 @@ li{
     font-size: 1.8rem;
     cursor: pointer;
 }
+.btn-3{
+    background-color: var(--secondary-color);
+    border: none;
+    padding: 1.6rem 4rem;
+    border-radius: 4.2rem;
+    color: var(--primary-color);
+    font-weight: 600;
+    font-size: 1.8rem;
+    cursor: pointer;
+}
 button:hover{
     background-color: var(--text-primary-color);
-    color: var(--primary-color);
+    color: var(--secondary-color);
 }
 img{
     max-width: 100%;
@@ -361,3 +371,61 @@ nav a{
     width: 35%;
     justify-content: right;
 }
+
+/* OUR PACKAGES STYLES */
+.op-per-bg{
+    padding-top: 5rem;
+    background-image: linear-gradient(180deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('../assets/OP.jpg');
+    background-position: unset;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+}
+.op-card-div{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.op-card-div ul{
+    line-height: 3.5rem;
+    margin-bottom: 3rem;
+}
+
+.card-lr{
+    padding: 3rem;
+    background-color: var(--secondary-color-light);
+    color: var(--secondary-color);
+    margin: 10rem 0;
+    color: var(--text-primary-color);
+    text-align: center;
+}
+.card-mid{
+    padding: 6rem 3rem;
+    background-color: var(--primary-color);
+    color: var(--secondary-color);
+    text-align: center;
+
+}
+.card-price{
+    font-size: 5rem;
+    color: var(--text-primary-color);
+    font-weight: 500;
+    margin-top: 2rem;
+}
+.per-month{
+    font-size: 2rem;
+    color: var(--text-secondary-color);
+    margin-bottom: 2rem;
+}
+.card-price-2{
+    font-size: 5rem;
+    color: var(--secondary-color);
+    font-weight: 500;
+    margin-top: 2rem;
+}
+.per-month-2{
+    font-size: 2rem;
+    color: var(--secondary-color);
+    margin-bottom: 2rem;
+}
+
