--- a/styles/style.css
+++ b/styles/style.css
@@ -326,19 +326,17 @@ nav a{
 }
 .tne-main-image-div{
     margin-top: 5rem;
+    display: grid;
+    grid-template-columns: repeat(20, 1fr);
+    grid-auto-rows: 25rem;
 }
-.tne-image-title{
+.the-image-title{
     color: var(--text-primary-color);
     font-weight: 500;
     padding: 25px;
     text-shadow: .0rem .0rem .5rem var(--secondary-color);
 }
-.tne-image-row-1,
-.tne-image-row-2{
-    display: flex;
-    height: 25rem;
-}
-.tne-image{
+.tne-image-box{
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -346,32 +344,32 @@ nav a{
 }
 .tne-img-div-1{
     background-image: linear-gradient(180deg, rgba(212, 0, 0, 0.5), rgba(212, 0, 0, 0.5)), url('../assets/exercise1.jpg');
-    width: 25%;
     align-items: last baseline;
+    grid-column: span 5;
 }
 .tne-img-div-2{
     background-image: linear-gradient(180deg, rgba(255, 166, 0, 0.5), rgba(255, 166, 0, 0.5)), url('../assets/exercise2.png');
-    width: 45%;
+    grid-column: span 9;
 }
 .tne-img-div-3{
     background-image: linear-gradient(180deg, rgba(1, 111, 185, 0.5), rgba(1, 111, 185, 0.5)), url('../assets/exercise3.png');
-    width: 30%;
     align-items: last baseline;
+    grid-column: span 6;
 }
 .tne-img-div-4{
     background-image: linear-gradient(180deg, rgba(127, 5, 95, 0.5), rgba(127, 5, 95, 0.5)), url('../assets/exercise4.png');
-    width: 40%; 
     justify-content: flex-end;
+    grid-column: span 7;
 }
 .tne-img-div-5{
     background-image: linear-gradient(180deg, rgba(143, 201, 58, 0.7), rgba(143, 201, 58, 0.7)), url('../assets/exercise5.jpg');
-    width: 25%;
     align-items: last baseline;
+    grid-column: span 6;
 }
 .tne-img-div-6{
     background-image: linear-gradient(180deg, rgba(100, 35, 8, 0.7), rgba(100, 35, 58, 0.7)), url('../assets/exercise6.jpg');
-    width: 35%;
     justify-content: right;
+    grid-column: span 7;
 }
 
 /* OUR PACKAGES STYLES */
