--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -19,8 +19,15 @@
         margin-top: 5rem;
     }
     
-    
-    
+    h3{
+        font-size: 2.5rem;
+    }
+    .card-price{
+        font-size: 2.5rem;
+    }
+    .card-price-2{
+        font-size: 2.5rem;
+    }
 
     nav{
         padding: 1rem 0;
@@ -59,6 +66,9 @@
         display: block;
         padding-bottom: 5rem;
     }
+    .mpad{
+        padding-right: 3rem;
+    }
     .card-lr, .card-mid{
         margin: 5rem 0;
         display: flex;
@@ -68,12 +78,12 @@
     }
     .left-div{
         border-left: 1px solid var(--text-primary-color);
-        padding-left: 5rem;
+        padding-left: 3rem;
         text-align: left;
     }
     .left-div2{
         border-left: 1px solid var(--secondary-color);
-        padding-left: 5rem;
+        padding-left: 3rem;
         text-align: left;
     }
 
@@ -107,7 +117,9 @@
 
 
     .cyh-text-div,
+    .tne-text-div,
     .rem-text-div,
+    .bmi-text-div,
     .bmi-chart-div,
     .bmi-input-div{
         width: 100%;
